# devjournal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/plans/: setup-ui.md
extras/cursor/: hooks.json
extras/cursor/hooks/: log-session-end.sh
extras/cursor/skills/: SKILL.md
src/devjournal/: __init__.py  cli.py  collector.py  config.example.yaml  config.py  engine.py  formatter.py  note.py  scheduler.py
src/devjournal/collectors/: __init__.py  confluence.py  cursor.py  github.py  gitlab.py  jira.py  local_git.py
src/devjournal/setup/: __init__.py  probes.py  secrets.py  server.py
src/devjournal/setup/assets/: app.js  index.html  styles.css
src/devjournal/templates/: daily.md
templates/: weekly.md
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_formatter.py  test_note.py  test_scheduler.py
tests/collectors/: test_confluence.py  test_cursor.py  test_github.py  test_gitlab.py  test_jira.py  test_local_git.py
tests/setup/: test_probes.py  test_secrets.py  test_server.py
