[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "devjournal"
dynamic = ["version"]
description = "Automated daily work journals for engineers. Pulls from Jira, GitLab, GitHub, Confluence, Cursor, and local git into your Obsidian vault."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vedanth Vasudev", email = "vedanth.vasudev@gmail.com" }]
keywords = ["obsidian", "journal", "devlog", "jira", "gitlab", "github", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
setup = [
    "keyring>=24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.26.0",
    "ruff>=0.4",
    "keyring>=24",
]

[project.scripts]
devjournal = "devjournal.cli:main"

[project.urls]
Homepage = "https://github.com/vedanthvdev/devjournal"
Repository = "https://github.com/vedanthvdev/devjournal"
Issues = "https://github.com/vedanthvdev/devjournal/issues"
Changelog = "https://github.com/vedanthvdev/devjournal/blob/master/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/devjournal/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/devjournal"]

[tool.hatch.build.targets.wheel.force-include]
"src/devjournal/setup/assets" = "devjournal/setup/assets"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
